fix loader spacing

--- a/source/stylesheets/partials/_home.scss
+++ b/source/stylesheets/partials/_home.scss
@@ -21,6 +21,10 @@ body, html {
   z-index:1;
   // position:relative;
 }
+.ui.active.dimmer {
+  margin: 2em 0;
+}
+
 .sidebar2{
   position:relative;
 }
